==> elagil/loeti/software/source/usb-pd/api/USB_PD_core.c <==
#include "USB_PD_core.h"
#include "ch.h"
#include "hal.h"
#include "dma_lock.h"
#define DEVICE_ID 0x25

void HW_Reset_state(void)
{
  palSetLine(LINE_PD_RST);
  chThdSleepMilliseconds(15); /*time to be dedected by the source */
  palClearLine(LINE_PD_RST);
  chThdSleepMilliseconds(15); /* this to left time to Device to load NVM*/
  usb_pd_init();
}

void SW_reset_by_Reg(void)
{
  USB_PD_ready();

  msg_t Status;
  //uint8_t Buffer[12];
  DataRW[0] = 1;
  Status = I2C_Write_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, STUSB_GEN1S_RESET_CTRL_REG, &DataRW[0], 1);

  if (Status == MSG_OK)
  {
    Status = I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, ALERT_STATUS_1, &DataRW[0], 12); // clear ALERT Status
    chThdSleepMilliseconds(27);                                                                   // on source , the debounce time is more than 15ms error recovery < at 25ms
    DataRW[0] = 0;
    Status = I2C_Write_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, STUSB_GEN1S_RESET_CTRL_REG, &DataRW[0], 1);
  }
}

void usb_pd_init(void)
{
  STUSB_GEN1S_ALERT_STATUS_MASK_RegTypeDef Alert_Mask;
  uint32_t Status = MSG_OK;
  //static unsigned char DataRW[13];
  DataRW[0] = 0;

  USB_PD_ready();

  Alert_Mask.d8 = 0xFF;
  Alert_Mask.b.CC_DETECTION_STATUS_AL_MASK = 0;
  Alert_Mask.b.PD_TYPEC_STATUS_AL_MASK = 0;
  Alert_Mask.b.PRT_STATUS_AL_MASK = 0;

  DataRW[0] = Alert_Mask.d8;

  Status = I2C_Write_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, ALERT_STATUS_MASK, &DataRW[0], 1); // unmask port status alarm
  /* clear ALERT Status */

  if (Status == MSG_OK)
  {
    I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, ALERT_STATUS_1, &DataRW[0], 12);
  }

  PD_status.Port_Status.d8 = DataRW[3];
  PD_status.CC_status.d8 = DataRW[6];
  PD_status.HWFault_status.d8 = DataRW[8];
  PD_status.Monitoring_status.d8 = DataRW[5];
  TypeC_Only_status = 0;

  return;
}

void ALARM_MANAGEMENT(void *arg)
{
  (void)arg;
  STUSB_GEN1S_ALERT_STATUS_RegTypeDef Alert_Status;
  STUSB_GEN1S_ALERT_STATUS_MASK_RegTypeDef Alert_Mask;
  //static unsigned char DataRW[40];

  USB_PD_ready();

  I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, CC_STATUS, &DataRW[0], 1);
  PD_status.CC_status.d8 = DataRW[0];

  if (palReadLine(LINE_PD_ALERT_INT) == 0)
  {
    I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, ALERT_STATUS_1, &DataRW[0], 2);
    Alert_Mask.d8 = DataRW[1];
    Alert_Status.d8 = DataRW[0] & ~Alert_Mask.d8;
    if (Alert_Status.d8 != 0)
    {
      PD_status.HW_Reset = (DataRW[0] >> 7);

      if (Alert_Status.b.CC_DETECTION_STATUS_AL != 0)
      {
        I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, PORT_STATUS_TRANS, &DataRW[0], 2);
        PD_status.Port_Status.d8 = DataRW[1];
        if (PD_status.Port_Status.b.CC_ATTACH_STATE != 0)
        {
          ConnectionStamp = chVTGetSystemTime();
          I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, CC_STATUS, &PD_status.CC_status.d8, 1);
        }
        else /* Detached detected */
        {

          ConnectionStamp = 0;
        }
      }
      if (Alert_Status.b.MONITORING_STATUS_AL != 0)
      {
        I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, TYPEC_MONITORING_STATUS_0, &DataRW[0], 2);
        PD_status.Monitoring_status.d8 = DataRW[1];
      }
      I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, CC_STATUS, &DataRW[0], 1);
      PD_status.CC_status.d8 = DataRW[0];

      if (Alert_Status.b.HW_FAULT_STATUS_AL != 0)
      {
        I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, CC_HW_FAULT_STATUS_0, &DataRW[0], 2);
        PD_status.HWFault_status.d8 = DataRW[1];
      }

      if (Alert_Status.b.PRT_STATUS_AL != 0)
      {
        USBPD_MsgHeader_TypeDef Header;
        I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, PRT_STATUS, &PD_status.PRT_status.d8, 1);

        if (PD_status.PRT_status.b.MSG_RECEIVED == 1)
        {
          I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, RX_HEADER, &DataRW[0], 2);
          Header.d16 = LE16(&DataRW[0]);

          if (Header.b.NumberOfDataObjects > 0)
          {
            switch (Header.b.MessageType)
            {
            case 0x01:
            {
              static uint32_t i, j;
              I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, RX_DATA_OBJ, &DataRW[0], Header.b.NumberOfDataObjects * 4);
              j = 0;

              PDO_FROM_SRC_Num = Header.b.NumberOfDataObjects;
              for (i = 0; i < Header.b.NumberOfDataObjects; i++)
              {
                PDO_FROM_SRC[i].d32 = (uint32_t)(DataRW[j] + (DataRW[j + 1] << 8) + (DataRW[j + 2] << 16) + (DataRW[j + 3] << 24));
                j += 4;
              }
              PDO_FROM_SRC_Valid = 1;
            }
            break;
            default:
              break;
            }
          }
          else
          {
            if (Header.b.MessageType == 0x06) /*if request accepted */
            {                                 // TODO: react
              __NOP();
            }
          }
        }
      }
    }
  }
}

void Read_SNK_PDO(void)
{
  USB_PD_ready();
  //static unsigned char DataRW[12];
  DataRW[0] = 0;

  static uint32_t i, j;

  if (I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, DPM_PDO_NUMB, &DataRW[0], 1) == MSG_OK)
  {

    PDO_SNK_NUMB = (DataRW[0] & 0x03);
    I2C_Read_USB_PD(STUSB45DeviceConf.I2cDeviceID_7bit, DPM_SNK_PDO1, &DataRW[0], PDO_SNK_NUMB * 4);
    j = 0;
    for (i = 0; i < PDO_SNK_NUMB; i++)
    {
      PDO_SNK[i].d32 = (uint32_t)(DataRW[j] + (DataRW[j + 1] << 8) + (DataRW[j + 2] << 16) + (DataRW[j + 3] << 24));
      j += 4;
    }
  }

  return;
}
