==> ahoink/SalamiSense/capeHW/firmware/Src/USB_PD_core.c <==
#include "USB_PD_core.h"

void HW_Reset_state(uint8_t Usb_Port)
{
  uint8_t Buffer[2];
  //HAL_GPIO_WritePin(Reset_GPIO_Port,Reset_Pin,GPIO_PIN_SET);
  HAL_Delay(15);  /*time to be detected by the source */
  //HAL_GPIO_WritePin(Reset_GPIO_Port,Reset_Pin,GPIO_PIN_RESET);
  usb_pd_init(0);
  Buffer[0] = 3;
  I2C_Write_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,DPM_PDO_NUMB,&Buffer[0],1 ); 
  
}

void SW_reset_by_Reg(uint8_t Usb_Port)
{
  int Status,i;
  uint8_t Buffer[12];
  Buffer[0] = 1;
  Status = I2C_Write_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,STUSB_GEN1S_RESET_CTRL_REG,&Buffer[0],1 );
  
  for (i=0;i<=12;i++)
    Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,ALERT_STATUS_1+i ,&Buffer[0], 1 );  // clear ALERT Status
  HAL_Delay(27); // on source , the debounce time is more than 15ms error recovery > at 25ms 
  Buffer[0] = 0; 
  Status = I2C_Write_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,STUSB_GEN1S_RESET_CTRL_REG,&Buffer[0],1 ); 
  
}

void usb_pd_init(uint8_t Usb_Port)
{
  STUSB_GEN1S_ALERT_STATUS_MASK_RegTypeDef Alert_Mask;
  int Status;
  static int i,j;
  static unsigned char DataRW[40];	
  DataRW[0]= 0;
  
  uint8_t Cut;
  I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,0x2F ,&Cut, 1 );
  
  Address = DPM_SNK_PDO1;
  I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,Address ,&DataRW[0],12  );
  j=0;
  for ( i = 0 ; i < 3 ; i++)
  {
    PDO_SNK[Usb_Port][i].d32 = (uint32_t )( DataRW[j] +(DataRW[j+1]<<8)+(DataRW[j+2]<<16)+(DataRW[j+3]<<24));
    j +=4;
  }    
  Address = ALERT_STATUS_1;
  for (i=0;i<=12;i++) /* clear ALERT Status */
    Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,Address+i ,&DataRW[0], 1 );  // clear ALERT Status
  
  
  Alert_Mask.d8 = 0xFF;
  
  Alert_Mask.b.CC_DETECTION_STATUS_AL_MASK = 0;
  Alert_Mask.b.PD_TYPEC_STATUS_AL_MASK = 0;
  Alert_Mask.b.PRT_STATUS_AL_MASK = 0;
  DataRW[0]= Alert_Mask.d8;// interrupt unmask 
  Status = I2C_Write_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,ALERT_STATUS_MASK ,&DataRW[0], 1 ); // unmask port status alarm 
  Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,PORT_STATUS ,&DataRW[0], 10 ); 
  USB_PD_Interupt_Flag[Usb_Port] =0;
  PD_status[Usb_Port].Port_Status.d8 = DataRW[ 1 ] ;
  PD_status[Usb_Port].CC_status.d8 = DataRW[3];
  PD_status[Usb_Port].HWFault_status.d8 = DataRW[6];
  PD_status[Usb_Port].Monitoring_status.d8=DataRW[3];
  
  
  return;
}

void ALARM_MANAGEMENT(uint8_t Usb_Port)   
{
  
  int i,Status;
  static unsigned char DataRead,DataWrite=0;
  STUSB_GEN1S_ALERT_STATUS_RegTypeDef Alert_Status;
  STUSB_GEN1S_ALERT_STATUS_MASK_RegTypeDef Alert_Mask;
  static unsigned char DataRW[40];
  
  
  if ( HAL_GPIO_ReadPin(GPIOB,EXTI5_PD_I2C_ALERT_Pin)== GPIO_PIN_RESET)
  {
    Address = ALERT_STATUS_1; 
    Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,Address ,&DataRW[0], 2 );
    Alert_Mask.d8 = DataRW[1]; 
    Alert_Status.d8 = DataRW[0] & ~Alert_Mask.d8;
    //       printf("\r\n read Status : 0x%04x", (uint16_t)DataRW[1] |DataRW[0]<<8  );
    //                printf("AL status:0x%x Mask:0x%x\n",DataRW[0],DataRW[1]);
    if (Alert_Status.d8 != 0)
    {     
      PD_status[Usb_Port].HW_Reset = (DataRW[ 0 ] >> 7);
      
      if (Alert_Status.b.CC_DETECTION_STATUS_AL !=0)
      {
        Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,PORT_STATUS_TRANS ,&DataRW[0], 2 );
        PD_status[Usb_Port].Port_Status.d8= DataRW[ 1 ]; 
        
      }
      if (Alert_Status.b.MONITORING_STATUS_AL !=0)
      {
        Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,TYPEC_MONITORING_STATUS_0 ,&DataRW[0], 2 );
        PD_status[Usb_Port].Monitoring_status.d8 = DataRW[ 1 ];
      }
      Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,CC_STATUS ,&DataRW[0], 1);
      PD_status[Usb_Port].CC_status.d8 = DataRW[ 0];
      
      if (Alert_Status.b.HW_FAULT_STATUS_AL !=0)
      {
        Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,CC_HW_FAULT_STATUS_0 ,&DataRW[0], 2 );
        PD_status[Usb_Port].HWFault_status.d8 = DataRW[ 1 ]; 
      }
      
      if (Alert_Status.b.PRT_STATUS_AL !=0)
      {
        USBPD_MsgHeader_TypeDef Header;
        STUSB_GEN1S_PRT_STATUS_RegTypeDef Prt_Status;
        Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,PRT_STATUS ,&PD_status[Usb_Port].PRT_status.d8, 1 );
        
        if (PD_status[Usb_Port].PRT_status.b.MSG_RECEIVED == 1)
        {
          Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,RX_HEADER ,&DataRW[0], 2 );
          Header.d16 = LE16(&DataRW[0]);
          if( Header.b.NumberOfDataObjects > 0  )
          {
            switch ( Header.b.MessageType )
            {
            case 0x01 :
              {
                static int i ,j ;
                Status = I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,RX_DATA_OBJ ,&DataRW[0], Header.b.NumberOfDataObjects * 4 );
                j=0;
                
                PDO_FROM_SRC_Num[Usb_Port]= Header.b.NumberOfDataObjects;
                for ( i = 0 ; i < Header.b.NumberOfDataObjects ; i++)
                {
                  PDO_FROM_SRC[Usb_Port][i].d32 = (uint32_t )( DataRW[j] +(DataRW[j+1]<<8)+(DataRW[j+2]<<16)+(DataRW[j+3]<<24));
                  j +=4;
                  
                }
              }
              break;
            default :
              break;
            }
            
            
            
          }
          else 
          {
#ifdef PRINTF            
            __NOP();
            // printf("Ctrl Message :0x%04x \r\n",Header.d16);
#else 
            __NOP();
#endif
          }
          
        }
        
      }
    }
    
    USB_PD_Interupt_Flag[Usb_Port] = 0;
  }
  
}

void Read_SNK_PDO(uint8_t Usb_Port)
{
  static unsigned char DataRW[12];	
  DataRW[0]= 0;
  
  static int i ,j ;
  
  
  Address = DPM_PDO_NUMB ;
  
  //printf("\n------Read STUSB NVM -------- %x\n", Address);  
  
  if ( I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,Address ,&DataRW[0], 1 )== HAL_I2C_ERROR_NONE  ) 
  {
    
    PDO_SNK_NUMB[Usb_Port] = (DataRW[0] & 0x03 );
    Address = DPM_SNK_PDO1;
    I2C_Read_USB_PD(STUSB45DeviceConf[Usb_Port].I2cBus,STUSB45DeviceConf[Usb_Port].I2cDeviceID_7bit ,Address ,&DataRW[0],PDO_SNK_NUMB[Usb_Port]*4  );
    j=0;
    for ( i = 0 ; i < PDO_SNK_NUMB[Usb_Port] ; i++)
    {
      PDO_SNK[Usb_Port][i].d32 = (uint32_t )( DataRW[j] +(DataRW[j+1]<<8)+(DataRW[j+2]<<16)+(DataRW[j+3]<<24));
      j +=4;
    }
  }
  USB_PD_Interupt_Flag[Usb_Port] =0;
  return;
}
